# jacobi_tasks

./: .gitignore  Dockerfile  README.md  conda_env.yaml
box_pose_estimation/: README.md  setup.py
box_pose_estimation/scripts/: box_pose_estimation.py
ik_solver/: README.md  README_old.md
ik_solver/ik_solver/: CMakeLists.txt  package.xml  setup.py
ik_solver/ik_solver/include/ik_solver/: ik_solver.hpp
ik_solver/ik_solver/scripts/ik_solver/: __init.py__  compute_ik.py
ik_solver/ik_solver/src/: bindings.cpp  compute_ik.cpp  ik_solver.cpp
ik_solver/robot-urdfs/: abb_irb6700_150_320.xacro  jacobi_robot.urdf  jacobi_robot.xacro.urdf  linear_axis.xacro  visualize_robot.py
ik_solver/robot-urdfs/meshes/abb_irb6700_150_320/visual/: base_link.mtl  link_1.mtl  link_2.mtl  link_3.mtl  link_4.mtl  link_5.mtl  link_6.mtl
ik_solver/robot-urdfs/meshes/linear_axis/visual/: base_link.mtl  link_1.mtl
