<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ik_solver</name>
  <version>0.0.0</version>
  <description>The ik_solver package</description>
  <maintainer email="tonolacesare@gmail.com">Cesare Tonola</maintainer>

  <license>BSD3-Clause</license>

  <depend>pinocchio</depend>
  <depend>pybind11</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
